--- a/plugin.ini
+++ b/plugin.ini
@@ -1,7 +1,7 @@
 [Plugin description]
-name =              "Facebook"
+name =              "Diaspora"
 version =           0.1
-author =            "Ben Werdmuller"
-author_email =      "ben@benwerd.com"
-author_url =        "http://werd.io"
-description =       "Cross-post site content to Facebook. Contains the <a href=\"https://github.com/facebook/facebook-php-sdk\">PHP Facebook SDK</a>."
+author =            "Lucas Verney (Phyks)"
+author_email =      "phyks@phyks.me"
+author_url =        "http://phyks.me"
+description =       "Cross-post site content to Diaspora."
