Templating and Account settings page

--- a/plugin.ini
+++ b/plugin.ini
@@ -1,5 +1,5 @@
 [Plugin description]
-name =              "Diaspora"
+name =              "KnownDiaspora"
 version =           0.1
 author =            "Lucas Verney (Phyks)"
 author_email =      "phyks@phyks.me"
